--- a/src/components/Featured/featured.scss
+++ b/src/components/Featured/featured.scss
@@ -44,12 +44,13 @@
             text-shadow: 4px 3px 4px rgba(0,0,0,0.8);
         }
         .desc{
-            margin:30px 0px;
+            margin-top: 30px;
             font-size: 18px;
             line-height: 1.5em;
             text-shadow: 4px 3px 4px rgba(0,0,0,0.8);
         }
         .buttons{
+            margin-top:30px;
             display: flex;
             a{
                 text-decoration: none;
@@ -112,6 +113,7 @@
                 display: none;
             }
             .buttons{
+                margin-top: 0;
                 button{
                     padding:0.5em 1em;
                     margin-right: 1em;
@@ -137,6 +139,9 @@
             }
             .desc{
                 display: none;
+            }
+            .buttons{
+                margin-top: 0;
             }
         }
     }
