--- a/src/components/Common/Loader/loader.scss
+++ b/src/components/Common/Loader/loader.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background:var(--main-color);
     .loader {
         color: var(--red);
         text-indent: -9999em;
