play 버튼 위치 변경

--- a/src/components/Featured/featured.scss
+++ b/src/components/Featured/featured.scss
@@ -141,7 +141,7 @@
                 display: none;
             }
             .buttons{
-                margin-top: 0;
+                margin-top: 2em;
             }
         }
     }
