--- a/src/components/Common/Modal/modal.scss
+++ b/src/components/Common/Modal/modal.scss
@@ -48,14 +48,14 @@
                 top: 0;
                 bottom: 0;
                 background-color: rgba(0,0,0,0.7);
-                padding: 3em 1.5em ;
+                padding: 2em 1.5em ;
                 text-shadow: 4px 3px 4px rgba(0,0,0,0.8);
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
                 .providers{
                     img{
-                        width: 36px;
+                        width: 32px;
                         height: auto;
                         margin-right: 10px;
                         &:last-child{
@@ -64,6 +64,29 @@
                     }
                 }
             }
+            .playBtn{
+                position: absolute;
+                bottom: 0;
+                right: 1.5em;
+                margin-bottom: -28px;
+                display: block;
+                text-decoration: none;
+                button{
+                    border: none;
+                    padding: 1em;
+                    color: #fff;
+                    background-color: var(--red);
+                    font-weight: 700;
+                    font-size: #{$font-default};
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+                    &:active, &:hover{
+                    background-color: var(--btn-hover);
+                }
+            } 
+        }
             h1{
                 margin-bottom: 0.5em;
             }
@@ -82,7 +105,7 @@
                     margin-right: 1em;
                     font-size: #{$font-medium};
                     cursor: pointer;
-                    &:active{
+                    &:active, &:hover{
                         background-color: #fff;
                         color:var(--main-color)
                     }
@@ -129,26 +152,6 @@
             font-size: #{$font-default};
             color: #fff;
             line-height: 1.5em;
-        }
-        .playBtn{
-            display: block;
-            margin-right: 1em;
-            text-decoration: none;
-            button{
-                border: none;
-                padding: 0.5em 1.5em;
-                color: #fff;
-                background-color: var(--red);
-                font-weight: 500;
-                font-size: #{$font-default};
-                border-radius: 5px;
-                display: flex;
-                align-items: center;
-                cursor: pointer;
-                &:active{
-                background-color: var(--btn-hover);
-                }
-            } 
         }
     }
 }
