--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -26,7 +26,9 @@
                 height: 25px;
                 margin-right: 40px;
             }
-            span{
+            span, a{
+                color: #fff;
+                text-decoration: none;
                 margin-right: 20px;
                 cursor: pointer;
             }
@@ -156,7 +158,9 @@
             ul{
                 padding:0;
             }
-            li{
+            li,a{
+                color: #fff;
+                text-decoration: none;
                 list-style: none;
                 padding:1em 0;
                 font-size: #{$font-medium};
