--- a/src/components/Common/Modal/modal.scss
+++ b/src/components/Common/Modal/modal.scss
@@ -160,16 +160,18 @@
     .modal_container{
         position:fixed;
         bottom:unset;
-        height: 100%;
+        height: 100vh;
         overflow: auto;
+        background-color: var(--main-color);
         .itemModal{
+            box-shadow: unset;
             position:relative;
             top:0;
             left: 0;
             width: 100vw;
             height: auto;
             border-radius: 0;
-            transform:unset;
+            transform: translate(0, 0);
             .video{
                 height: 30vh;   
             }
@@ -178,37 +180,35 @@
                     height:300px;
                 }
                 .itemText{
-                        padding:2em 1em;
-                        .casts{
-                        font-size: #{$font-default};
-                        width: 100%;
-                        display: block;
-                        span{
-                            display: inline-block;
-                            line-height: 1.5em;
-                        }
+                    padding:2em 1em;
+                    span{
+                        display: inline-block;
+                        line-height: 1.5em;
                     }
                 }
                 
             }
-            .itemInfo{
-                .itemInfoTop{
-                    flex-direction: column;
-                    align-items:unset;
-                    span{
-                        margin-bottom: 0.5em;
-                        &.limit{
-                            margin-left:0;
-                            margin-right: 0;
-                            border:0;
-                            padding: 0;
-                        }
-                    }
-                }
-            }
+            // .itemInfo{
+            //     .itemInfoTop{
+            //         flex-direction: column;
+            //         align-items:unset;
+            //         span{
+            //             margin-bottom: 0.5em;
+            //             &.limit{
+            //                 margin-left:0;
+            //                 margin-right: 0;
+            //                 border:0;
+            //                 padding: 0;
+            //             }
+            //         }
+            //     }
+            // }
             .casts{
-                display: flex;
-                flex-direction: column;
+                line-height: 1.5em;
+                b{
+                    display:block;
+                }
+                
             }
         }
     }
