--- a/src/components/Common/Modal/modal.scss
+++ b/src/components/Common/Modal/modal.scss
@@ -53,14 +53,25 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
-                .providers{
-                    img{
-                        width: 32px;
-                        height: auto;
-                        margin-right: 10px;
-                        &:last-child{
-                            margin-right:0;
-                        }
+                h1{
+                margin-bottom: 0.25em;
+                }
+                h2{
+                    font-weight: 300;
+                    color: #999;
+                    font-size: 1.25em;
+                }
+            }
+            .providers{
+                position:absolute;
+                top: 2em;
+                right: 1.5em;
+                img{
+                    width: 32px;
+                    height: auto;
+                    margin-right: 10px;
+                    &:last-child{
+                        margin-right:0;
                     }
                 }
             }
@@ -87,9 +98,7 @@
                 }
             } 
         }
-            h1{
-                margin-bottom: 0.5em;
-            }
+            
         }
         .itemInfo{
             padding: 2em 1.5em;
@@ -172,8 +181,10 @@
             height: auto;
             border-radius: 0;
             transform: translate(0, 0);
-            .video{
-                height: 30vh;   
+            .itemImg{
+                .providers{
+                    top: 2em;
+                }
             }
             .itemImg{
                 img{
@@ -188,21 +199,6 @@
                 }
                 
             }
-            // .itemInfo{
-            //     .itemInfoTop{
-            //         flex-direction: column;
-            //         align-items:unset;
-            //         span{
-            //             margin-bottom: 0.5em;
-            //             &.limit{
-            //                 margin-left:0;
-            //                 margin-right: 0;
-            //                 border:0;
-            //                 padding: 0;
-            //             }
-            //         }
-            //     }
-            // }
             .casts{
                 line-height: 1.5em;
                 b{
