--- a/src/components/ListItem/listItem.scss
+++ b/src/components/ListItem/listItem.scss
@@ -10,6 +10,7 @@
     img{
         width:100%;
         height: 100%;
+        min-height: 480px;
         object-fit: cover;
     }
     .ranking{
@@ -33,6 +34,9 @@
 @include mobile {
     .listItem{
         border-radius:10px;
+        img{
+            min-height: 240px;
+        }
         .ranking{
             font-size: 1rem;
             width: 1.75em;
@@ -52,7 +56,11 @@
 }
 
 @include desktop {    
-    
+     .listItem{
+        img{
+            min-height: 360px;
+        }
+    }
 }
 
 @include xldesktop {
