--- a/src/components/Common/Modal/modal.scss
+++ b/src/components/Common/Modal/modal.scss
@@ -35,6 +35,7 @@
         }
         .itemImg{
             position:relative;
+            height: 350px;
             img{
                 width: 100%;
                 height: 350px;
