modify image height

--- a/src/components/Common/Modal/modal.scss
+++ b/src/components/Common/Modal/modal.scss
@@ -183,11 +183,10 @@
             border-radius: 0;
             transform: translate(0, 0);
             .itemImg{
+                height:300px;
                 .providers{
                     top: 2em;
                 }
-            }
-            .itemImg{
                 img{
                     height:300px;
                 }
