--- a/src/components/ListItem/listItem.scss
+++ b/src/components/ListItem/listItem.scss
@@ -2,7 +2,7 @@
 
 .listItem{
     width: 98%;
-    height: auto;
+    height: 27em;
     margin: 0 1%;
     cursor:pointer;
     color: #fff;
@@ -33,6 +33,7 @@
 @include mobile {
     .listItem{
         border-radius:10px;
+        height:15em;
         .ranking{
             font-size: 1rem;
             width: 1.75em;
@@ -43,6 +44,7 @@
 
 @include tablet {    
     .listItem{
+        height: 20em;
         .ranking{
             font-size: #{$font-medium};
             width: 45px;
@@ -52,6 +54,9 @@
 }
 
 @include desktop {   
+    .listItem{
+        height: 22em;
+    }
 }
 
 @include xldesktop {
